samples/_failures_safe/1761310166_2da524_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_802841e1.c: In function ‘tokenize’:
./samples/SAFE/__tmp_802841e1.c:152:24: error: expected ‘;’ at end of input
  152 |             advance = 1
      |                        ^
      |                        ;
./samples/SAFE/__tmp_802841e1.c:152:13: error: expected declaration or statement at end of input
  152 |             advance = 1
      |             ^~~~~~~
./samples/SAFE/__tmp_802841e1.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_802841e1.c:152:13: error: expected declaration or statement at end of input
